fix profile on resume spacing

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,5 @@
 .about-div {
-  width: 50%;
+  width: 70%;
   left: 100px;
   position: relative;
   transform: skewX(20deg);
