--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -20,6 +20,12 @@
   height: 350px;
   width: 650px;
   transform: skewX(20deg);
+  position: relative;
+  left: 60px;
+}
+
+.profile-title {
+  margin-bottom: 0;
 }
 
 .movie-div {
